# chainobserver

./: .env.example  .gitignore  BENCHMARKS.md  CHAINOBSERVER.md  CHAINOBSERVER_DEVPOST.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt  run_benchmarks.py  server.py
.github/workflows/: test.yml
chainobserver/: __init__.py  agent.py  cache.py  chains.py  cli.py  mcp_server.py  models.py  prompts.py
chainobserver/backends/: mcp.py
tests/: test_benchmarks.py  test_cache.py  test_chains.py  test_cli.py  test_mcp_tools.py  test_models.py  test_server.py
