[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chainobserver"
version = "0.1.0"
description = "AI agent that diagnoses failed Ethereum transactions in seconds"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "google-genai>=0.8.0",
    "mcp>=1.0.0",
    "web3>=6.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "pytest-mock>=3.12"]

[project.scripts]
chainobserver = "chainobserver.cli:main"
chainobserver-mcp = "chainobserver.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["chainobserver"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "network: requires live Ethereum RPC (deselect with -m not network)",
    "unit: pure logic, no external calls",
]
